Added Places Activity, Recylcer view for places.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,10 @@
     <string name="facebook_app_id">1101829736603185</string>
 
     <string name="fb_login_protocol_scheme">fb1101829736603185</string>
+
+    <array name="story_options">
+        <item>Share</item>
+        <item>Delete</item>
+        <item>Report</item>
+    </array>
 </resources>
