Added other activities. Added menu in the story two

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="invite_friends">Invite Friends</string>
     <string name="places">Places</string>
     <string name="notifications">Notifications</string>
+    <string name="report">Report an issue</string>
     <string name="nothing"></string>
 
 </resources>
